autoconf-archive: Autospec creation for update from version 2017.09.28 to version 2018.03.13
Alexey Kopytov (1):
      AX_GCC_ARCHFLAG: update Broadwell CPUID patterns.

Bastien Roucariès (7):
      Support sdcc compiler
      Fix version extraction with old sdcc
      Modernize ax_lib_postgresql
      Add action found/not found to PostgreSQL
      Use pkg-config for postgresql
      Populate like pkgconfig the variables
      Robustify

Bojan Nikolic (1):
      AX_BOOST_THREAD: correct bug in case statement for solaris and mingw32

Corey Farrell (1):
      AX_GCC_FUNC_ATTRIBUTE: Add support for 'sentinel' attribute.

Enrico M. Crisostomo (3):
      Add ax_prog_date.m4
      Update file header
      Fix build errors

Evgeny Lensky (1):
      Fix check for system libraries in both lib64 and lib

Harenome Ranaivoarivony-Razanajato (1):
      AX_PROG_HELP2MAN: fix default behaviour

Kip Warner (1):
      ax_var_{push,pop}.m4 were both missing auxiliary macros found in the other...

Peter Simons (14):
      maint: post-release administrivia
      Merge pull request #136 from rurban/ax_compiler_flags_cflags
      Merge pull request #138 from coreyfarrell/gcc_func_attributes
      Merge pull request #139 from harenome/ax_prog_help2man
      Merge pull request #140 from surfernsk/master
      Merge pull request #141 from emcrisostomo/Add_ax_prog_date
      Merge pull request #143 from ptomato/normalize-pkg-check-modules
      Merge pull request #144 from akopytov/master
      Merge pull request #146 from rurban/ldflags
      Merge pull request #147 from rurban/cflags
      AX_DIST_RPM: various fixes
      AX_COMPILER_VERSION: bump serial number
      AX_LIB_POSTGRESQL: re-format to canonic layout and fix serial number
      Update dates and version numbers for upcoming release.

Philip Chimento (1):
      AX_PKG_CHECK_MODULES: Normalize whitespace in package lists

Reini Urban (3):
      AX_COMPILER_FLAGS: add new gcc flags
      ax_compiler_flags_ldflags: harden
      ax_

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = autoconf-archive
-url = https://mirrors.kernel.org/gnu/autoconf-archive/autoconf-archive-2017.09.28.tar.xz
+url = https://mirrors.kernel.org/gnu/autoconf-archive/autoconf-archive-2018.03.13.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/autoconf-archive.git
 
@@ -17,6 +17,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
