[update to 2019.01.06] all-permissive for macros from Guido Draheim (only author)
Alexander Lakhin (1):
      ax_lib_postgresql: Double-quote the literal with square brackets

Andreas Schwab (1):
      AX_BOOST_BASE: add riscv64 to the list of lib64 architectures

Bastien Roucariès (5):
      Expand enable/disable code coverage
      Use AX_ADD_AM_MACRO_STATIC
      Do not use coverage rules outside topdir
      Force use of GNU make
      Use non localised date for ax_am_macros

Carnë Draug (1):
      ax_jni_include_dir.m4: require AC_CANONICAL_HOST to make host_os available

Daniel Black (1):
      ax_gcc_archflag: include POWER7 -> POWER10

Guido Draheim (43):
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for macros from Guido Draheim (only author)
      all-permissive for mac

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = autoconf-archive
-url = https://mirrors.kernel.org/gnu/autoconf-archive/autoconf-archive-2018.03.13.tar.xz
+url = https://mirrors.kernel.org/gnu/autoconf-archive/autoconf-archive-2019.01.06.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/autoconf-archive.git
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
